// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Curve /> > all points defined > Not render when points is empty 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
  </svg>
</div>
`;

exports[`<Curve /> > all points defined > renders 1 area 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40L40,10L55,40L70,10L70,100L55,400L40,100L25,400L10,100Z"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > all points defined > renders 1 curve 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40L40,10L55,40L70,10"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > all points defined > renders 1 horizontal layout area 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40L40,10L55,40L70,10L70,0L55,0L40,0L25,0L10,0Z"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > all points defined > renders 1 vertical layout area 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40L40,10L55,40L70,10L70,0L55,0L40,0L25,0L10,0Z"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > connectNulls > renders a broken line when connectNulls is false and points have nulls 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40M55,40L70,10"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > connectNulls > renders a single connected line when connectNulls is true and points have nulls 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M10,10L25,40L55,40L70,10"
      fill="none"
      stroke="#000"
    />
  </svg>
</div>
`;

exports[`<Curve /> > connectNulls > should not throw when connectNulls is true and baseLine has nulls 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M1,1L1,10Z"
    />
  </svg>
</div>
`;

exports[`<Curve /> > connectNulls > should render a broken area when connectNulls is false and baseLine has nulls 1`] = `
<div>
  <svg
    class="recharts-surface"
    height="400"
    viewBox="0 0 400 400"
    width="400"
  >
    <title />
    <desc />
    <path
      class="recharts-curve"
      d="M1,1L1,10ZM3,3L3,30Z"
    />
  </svg>
</div>
`;
